# psclaude

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  publish.yml
docs/: SPEC.md  original_prototype.py
plugins/psclaude-skills/: plugin.toml
plugins/psclaude-skills/skills/: psclaude-oracle.md
scripts/: check.sh  release.sh  sync-plugin.sh  version.sh
src/psclaude/: __init__.py  _client.py  _detect.py  _install.py  _marketplace.py  _models.py  _plugins.py  _version.py
src/psclaude/_plugin/psclaude-skills/: CLAUDE.md
src/psclaude/_plugin/psclaude-skills/skills/: build-with-psclaude.md  marketplace-integration.md
tests/: test_client.py  test_install.py  test_marketplace.py  test_models.py  test_plugins.py  test_version.py
